[gd_scene load_steps=8 format=3 uid="uid://cldrejsg11lmm"]

[ext_resource type="Script" uid="uid://dyfpy7gt7pnuf" path="res://scripts/HexTile.gd" id="1_14bxf"]

[sub_resource type="CylinderMesh" id="CylinderMesh_xexb5"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.2
radial_segments = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kp5oc"]
albedo_color = Color(0.2, 0.6, 1, 1)
metallic = 0.2
roughness = 0.5
emission_enabled = true
emission = Color(0.2, 0.6, 1, 1)
emission_energy_multiplier = 0.05

[sub_resource type="CylinderMesh" id="CylinderMesh_6kdnn"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.1
radial_segments = 6

[sub_resource type="CylinderMesh" id="CylinderMesh_lv0o4"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.1
radial_segments = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gxhvl"]
albedo_color = Color(0, 0.8, 1, 0.8)
emission_enabled = true
emission = Color(0, 0.8, 1, 1)
emission_energy_multiplier = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_82kkx"]
height = 0.2
radius = 1.0

[node name="HexTile" type="Node3D"]
script = ExtResource("1_14bxf")

[node name="HexMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_xexb5")
surface_material_override/0 = SubResource("StandardMaterial3D_kp5oc")

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
visible = false
mesh = SubResource("CylinderMesh_6kdnn")

[node name="OwnerIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0)
visible = false
mesh = SubResource("CylinderMesh_lv0o4")
surface_material_override/0 = SubResource("StandardMaterial3D_gxhvl")

[node name="TypeIcon" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
billboard = 1
text = "D"
font_size = 24
outline_size = 2

[node name="StrengthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.7)
billboard = 1
text = "1"
font_size = 16
outline_size = 2

[node name="ContestedIndicator" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
visible = false
billboard = 1
text = "!"
font_size = 32
font_color = Color(1, 0.341176, 0.133333, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_82kkx")
